# elt-practice-2024

./: .env_copy  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .yamllint  Dockerfile.dbt  Dockerfile.nginx  Dockerfile.pgadmin  Dockerfile.postgres  Dockerfile.python  README.md  compose.yml  haha.sql  nginx.conf  pyproject.toml  requirements.txt  run.sh
.github/: pull_request_template.md
.github/workflows/: README.md  lint.yaml  lint_and_test.yaml
coverage_html_report/: README.md  class_index.html  function_index.html  index.html  status.json  z_08b4cb1648a15a99___init___py.html  z_08b4cb1648a15a99_test_data_extraction_py.html  z_08b4cb1648a15a99_test_download_file_py.html  z_145eef247bfb46b6___init___py.html  z_27bcb07cf676e1a3___init___py.html  z_27bcb07cf676e1a3_client_data_manager_py.html  z_27bcb07cf676e1a3_custom_logger_py.html  z_27bcb07cf676e1a3_data_extraction_py.html  z_27bcb07cf676e1a3_data_extraction_utils_py.html  z_27bcb07cf676e1a3_data_ingestion_py.html  z_27bcb07cf676e1a3_data_ingestion_utils_py.html  z_27bcb07cf676e1a3_utils_py.html  z_ebad062ddfa09934_test_sys_path_py.html
dev/: README.md  dev-requirements.txt  prepare-commit-msg  setup_prepare_commit_msg_hook.sh
elt_practice_2024/: data_extraction.py
images/: README.md
scripts/: README.md
scripts/postgres/: README.md  init.sh
src/: README.md
src/elt_dbt/: .dbtignore  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
src/elt_dbt/macros/: clean_date_of_birth.sql  clean_invalid_values.sql  clean_phone_number.sql  clean_timestamp.sql  client_acme_membership_processed_columns.sql  get_client_acme_claim_processed_columns.sql  get_client_acme_membership_processed_columns.sql  get_client_hooli_claim_processed_columns.sql  get_client_hooli_membership_processed_columns.sql  union_acme_claim_by_tables_by_pattern.sql  union_acme_members_by_tables_by_pattern.sql  union_hooli_claim_by_tables_by_pattern.sql  union_hooli_members_by_tables_by_pattern.sql  union_tables.sql  union_tables_by_pattern.sql
src/elt_dbt/models/: README.md
src/elt_dbt/models/client_acme/: README.md  _client_acme__docs.md  _client_acme__models.yml  clean_membership.sql  member.sql  test_model.sql
src/elt_dbt/models/docs/: README.md  _docs__docs.md
src/elt_dbt/models/example/: README.md  schema.yml
src/elt_dbt/models/mart/: READMD.md
src/elt_dbt/models/sources/: README.md  _sources__docs.md  _sources__sources.yml
src/elt_dbt/models/staging/: README.md
src/elt_dbt/models/staging/client_acme/: README.md  _stg_client_acme__docs.md  _stg_client_acme__models.yml  stg_client_acme__stacked_claims.sql  stg_client_acme__stacked_members.sql
src/elt_dbt/models/staging/client_hooli/: READMD.md  _stg_client_hooli__docs.md  _stg_client_hooli__models.yml  stg_client_hooli__stacked_claims.sql  stg_client_hooli__stacked_members.sql
src/elt_practice_2024/: README.md  client_data_manager.py  client_data_sources.json  custom_logger.py  data_extraction.py  data_extraction_utils.py  data_ingestion.py  data_ingestion_utils.py  data_sources.json  test.py  utils.py
src/tests/: README.md  test_client_data_manager.py  test_custom_logger.py  test_data_extraction.py  test_data_extraction_utils.py  test_data_ingestion.py  test_data_ingestion_utils.py  test_download_file.py
tests/: test_data_extraction.py  test_download_file.py
