[tool.poetry]
name = "elt-practice-2024"
version = "0.1.0"
description = "Practice repo for learning about ELT in 2024"
authors = ["Cristian Nuno <cnuno2@illinois.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
black = "24.8.0"
flake8 = "7.1.1"
vulture = "2.11"
pandas = "2.2.2"
pytest = "8.3.2"
dbt-core = "1.8.5"
setuptools = "72.2.0"
dbt-postgres = "1.8.2"
psycopg2-binary = "2.9.9"
pendulum = "3.0.0"


[build-system]
requires = ["poetry-core==1.8.0"]
build-backend = "poetry.core.masonry.api"
