[tool.poetry]
name = "elt-practice-2024"
version = "0.4.0"
description = "Practice repo for learning about ELT in 2024"
authors = ["Cristian Nuno <cnuno2@illinois.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
black = "24.8.0"
flake8 = "7.1.1"
vulture = "2.11"
pandas = "2.2.2"
pytest = "8.3.2"
dbt-core = "1.8.5"
setuptools = "72.2.0"
dbt-postgres = "1.8.2"
psycopg2-binary = "2.9.9"
pendulum = "3.0.0"
yamllint = "1.35.1"
pre-commit = "3.8.0"
hadolint-py = {git = "https://github.com/AleksaC/hadolint-py.git", rev = "v2.12.1-beta"}
pytest-cov = "5.0.0"
poetry-plugin-export = "1.8.0"
mypy = "1.11.1"
pip = "24.2"
types-requests = "2.32.0.20240712"

[tool.poetry.plugins."poetry.application.plugin"]
export = "poetry_plugin_export.plugins:ExportApplicationPlugin"


[build-system]
requires = ["poetry-core==1.8.3"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
paths = ["src", "tests"]
min_confidence = 70
sort_by_size = true
verbose = false

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
pythonpath = [
  "src"
]
addopts = [
    "--ignore=tests/archive/",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term",
    "-rA"
]

[tool.coverage.run]
source = [
    "src"
]

[tools.coverage.report]
format = "markdown"

[tool.coverage.html]
directory = "coverage_html_report"

[[tool.mypy.overrides]]
module = "elt_practice_2024.*"
ignore_missing_imports = true